--- a/beach.html
+++ b/beach.html
@@ -56,7 +56,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2023 Your Website Name. All rights reserved.</p>
+    <p>&copy; 2023 California Travel Guide. All rights reserved. | Website by Reena</p>
   </footer>
 </body>
 </html>
