--- a/offthebeatenpath.html
+++ b/offthebeatenpath.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Off the Beaten Path in California</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>Off the Beaten Path</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
   <header>
-    <h1>Off the Beaten Path in California</h1>
+    <h1>California Travel Guide</h1>
     <nav>
-      <!-- Navigation links to other pages on your website -->
       <a href="index.html">Home</a>
       <a href="adventure.html">Adventure</a>
       <a href="beach.html">Beach</a>
@@ -22,41 +21,59 @@
   </header>
 
   <section>
-    <h2>Discover Hidden Gems and Secret Treasures</h2>
+    <h2>Off the Beaten Path</h2>
+    <p>
+      Looking for hidden gems and unique experiences? Explore these off-the-beaten-path destinations in California that offer a different side of the state's beauty and charm.
+    </p>
+
     <div class="destination">
-      <h3>Joshua Tree National Park</h3>
-      <img src="joshuatree.jpg" alt="Joshua Tree National Park">
-      <p>Escape to the otherworldly landscapes of Joshua Tree National Park. Explore its unique Joshua trees, hike through rugged rock formations, and stargaze under the clear desert skies. This hidden gem offers solitude and a chance to connect with nature.</p>
-      <a href="joshua_tree.html">Learn More</a>
-    </div>
-    
-    <div class="destination">
-      <h3>Big Sur</h3>
-      <img src="bigsur.jpg" alt="Big Sur">
-      <p>Embark on a scenic coastal drive along California's Big Sur. Marvel at the breathtaking views of dramatic cliffs, pristine beaches, and turquoise waters. Discover hidden coves, hike through redwood forests, and experience the serenity of this coastal paradise.</p>
-      <a href="big_sur.html">Learn More</a>
+      <h3>Mount Shasta</h3>
+      <img src="mountshasta.jpg" alt="Destination 1" class="destination-image">
+      <p>
+        Located in Northern California, Mount Shasta is a stunning snow-capped mountain known for its natural beauty and spiritual significance. Hike through pristine wilderness, explore the alpine lakes, and experience the tranquility of this majestic peak.
+      </p>
+      <a href="mountshasta.html">Learn More</a>
     </div>
 
     <div class="destination">
       <h3>Channel Islands National Park</h3>
-      <img src="channelislands.avif" alt="Channel Islands National Park">
-      <p>Explore the remote beauty of Channel Islands National Park. Take a boat or kayak to the islands and discover untouched landscapes, diverse marine life, and unique flora and fauna. This hidden treasure offers hiking, camping, and incredible opportunities for wildlife encounters.</p>
-      <a href="channel_islands.html">Learn More</a>
+      <img src="channelislands.jpg" alt="Destination 2" class="destination-image">
+      <p>
+        Situated off the coast of Southern California, the Channel Islands National Park is a hidden paradise. Accessible only by boat, these unspoiled islands offer opportunities for hiking, wildlife spotting, and diving in crystal-clear waters teeming with marine life.
+      </p>
+      <a href="channelislands.html">Learn More</a>
     </div>
 
     <div class="destination">
-      <h3>Salvation Mountain</h3>
-      <img src="salvationmountain.jpg" alt="Salvation Mountain">
-      <p>Experience the vibrant and unconventional art of Salvation Mountain. Located near the Salton Sea, this colorful, hand-painted mountain is a testament to one man's artistic vision. Explore the intricate details and inspiring messages that cover this whimsical landmark.</p>
-      <a href="salvation_mountain.html">Learn More</a>
+      <h3>Solvang</h3>
+      <img src="solvang.jpg" alt="Destination 3" class="destination-image">
+      <p>
+        Tucked away in the Santa Ynez Valley, Solvang is a charming Danish village that feels like a slice of Europe in California. Stroll through streets lined with windmills, enjoy Danish pastries, and explore the local wineries that dot the surrounding countryside.
+      </p>
+      <a href="solvang.html">Learn More</a>
     </div>
 
-    <!-- Add more off-the-beaten-path destinations with similar HTML structure -->
+    <div class="destination">
+      <h3>Bodie State Historic Park</h3>
+      <img src="bodie.jpg" alt="Destination 4" class="destination-image">
+      <p>
+        Step back in time at Bodie State Historic Park, a well-preserved ghost town in the Eastern Sierra region. Explore the deserted buildings, learn about the town's gold rush history, and witness the eerie atmosphere of this once-booming mining town.
+      </p>
+      <a href="bodie.html">Learn More</a>
+    </div>
 
+    <div class="destination">
+      <h3>Trinidad</h3>
+      <img src="trinidad.jpg" alt="Destination 5" class="destination-image">
+      <p>
+        Nestled on the rugged Northern California coast, Trinidad is a small coastal town that offers breathtaking scenery and a tranquil atmosphere. Discover hidden coves, walk along scenic trails, and experience the laid-back charm of this coastal gem.
+      </p>
+      <a href="trinidad.html">Learn More</a>
+    </div>
   </section>
 
   <footer>
-    <p>&copy; 2023 Your Website Name. All rights reserved.</p>
+    &copy; 2023 California Travel Guide. All rights reserved. | Website by Reena
   </footer>
 </body>
 </html>
